[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/alagard.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/sprites/frames/elf_m_idle_anim_f0.png" type="Texture" id=2]
[ext_resource path="res://src/scripts/HeirSelectorScreen.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[node name="HeirSelectorScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="BackgroundPanel" type="Panel" parent="."]
margin_right = 320.0
margin_bottom = 181.0
custom_styles/panel = SubResource( 1 )

[node name="LabelChoseHeir" type="Label" parent="."]
margin_left = 43.0
margin_top = 19.0
margin_right = 280.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 2 )
text = "Chose your heir"
align = 1
valign = 1

[node name="Char1" type="Panel" parent="."]
margin_left = 24.0
margin_top = 63.0
margin_right = 104.0
margin_bottom = 163.0

[node name="Sprite" type="Sprite" parent="Char1"]
position = Vector2( 39, 22 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="Char1"]
margin_left = 8.0
margin_top = 46.0
margin_right = 136.0
margin_bottom = 84.0
rect_scale = Vector2( 0.5, 0.5 )
align = 1
autowrap = true

[node name="ButtonChose1" type="Button" parent="Char1"]
margin_left = 6.0
margin_top = 80.0
margin_right = 75.0
margin_bottom = 96.0
text = "Choose"

[node name="Char2" type="Panel" parent="."]
margin_left = 120.0
margin_top = 63.0
margin_right = 200.0
margin_bottom = 163.0

[node name="Sprite" type="Sprite" parent="Char2"]
position = Vector2( 39, 22 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="Char2"]
margin_left = 8.0
margin_top = 46.0
margin_right = 136.0
margin_bottom = 84.0
rect_scale = Vector2( 0.5, 0.5 )
align = 1
autowrap = true

[node name="ButtonChose2" type="Button" parent="Char2"]
margin_left = 6.0
margin_top = 80.0
margin_right = 75.0
margin_bottom = 96.0
text = "Choose"

[node name="Char3" type="Panel" parent="."]
margin_left = 216.0
margin_top = 64.0
margin_right = 296.0
margin_bottom = 164.0

[node name="Sprite" type="Sprite" parent="Char3"]
position = Vector2( 39, 22 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="Char3"]
margin_left = 8.0
margin_top = 46.0
margin_right = 136.0
margin_bottom = 84.0
rect_scale = Vector2( 0.5, 0.5 )
align = 1
autowrap = true

[node name="ButtonChose3" type="Button" parent="Char3"]
margin_left = 6.0
margin_top = 80.0
margin_right = 75.0
margin_bottom = 96.0
text = "Choose"

[connection signal="pressed" from="Char1/ButtonChose1" to="." method="_on_ButtonChose1_pressed"]
[connection signal="pressed" from="Char2/ButtonChose2" to="." method="_on_ButtonChose2_pressed"]
[connection signal="pressed" from="Char3/ButtonChose3" to="." method="_on_ButtonChose3_pressed"]
